fix overflow at note

--- a/src/styles/modal/Navbar.css
+++ b/src/styles/modal/Navbar.css
@@ -183,8 +183,6 @@ nav {
 }
 .profile_pop-body {
     flex: 1;
-    margin: 0 15px;
-    padding: 10px;
     border-radius: 10px;
 }
 .profile_pop-nickname {
